--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <link rel="stylesheet" href="style.css">
 
 </head>
-
   <body>
-
-
 <div class = 'card'>
   <div class = 'search'>
     <input type = "text" placeholder = "enter city name"
@@ -38,6 +35,33 @@
     </div>
   </div>
 </div>
-  </body>
+<script>
 
-  </html>
+const apiKey = "89638d41ac4d76e85c0eca18872b79bb";
+const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+
+const searchBox = document.querySelector(".search input")
+const searchBtn = document.querySelector(".search button")
+
+async function checkWeather(city){
+    const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+    var data = await response.json();
+
+    console.log(data);
+
+    document.querySelector(".city").innerHTML = data.name;
+    document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
+    document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+    document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+
+}
+
+searchBtn.addEventListener("click", ()=> {
+  checkWeather(searchBox.value);
+})
+
+checkWeather();
+
+</script>
+</body>
+</html>
