--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     spellcheck="false">
     <button><img src = "images/search.png"></button>
   </div>
+  <div class ="error">
+      <p>Invalid City Name</p>
+  </div>
   <div class="weather">
     <img src = "images/rain.png" class="weather-icon">
     <h1 class="temp">22°C</h1>
@@ -46,6 +49,10 @@ const weatherIcon = document.querySelector(".weather-icon");
 
 async function checkWeather(city){
     const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+    if(response.status == 404) {
+      document.querySelector(".error").style.display = "block";
+      document.querySelector(".weather").style.display = "none";
+    }
     var data = await response.json();
 
     document.querySelector(".city").innerHTML = data.name;
