--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ async function checkWeather(city){
     }
     else{
     var data = await response.json();
-
+    var f = Math.round(((data.main.temp) * 9/5) + 32)
     document.querySelector(".city").innerHTML = data.name;
-    document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
+    document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c" +` / ${f}°f`;
     document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
     document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
 
