--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
   <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
   <link rel="stylesheet" href="style.css">
-
+  <link rel="stylesheet" href="dark_style.css" id="dark-mode-css" disabled>
 </head>
   <body>
+
+<div class = "container">
+
+
+  <button id="toggle-dark-mode" class = 'btn btn-dark'>Toggle Dark Mode</button>
 <div class = 'card'>
+
+
   <div class = 'search'>
     <input type = "text" placeholder = "enter city name"
     spellcheck="false">
@@ -37,6 +44,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 <script src="weather.js">
 </script>
