working on error

--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
   <link rel="stylesheet" href="dark_style.css" id="dark-mode-css" disabled>
 </head>
   <body>
-
 <div class = "container">
 
-
-  <button id="toggle-dark-mode" class = 'btn btn-dark'>Toggle Dark Mode</button>
+<button id="toggle-dark-mode" class = 'btn btn-dark'>Toggle Dark Mode</button>
 <div class = 'card'>
 
 
   <div class = 'search'>
-    <input type = "text" placeholder = "enter city name"
-    spellcheck="false">
+    <input type = "text" placeholder = "enter city name" spellcheck="false">
     <button><img src = "images/search.png"></button>
   </div>
   <div class ="error">
